NMR-5420: removed icons from peak slider